Bug 554942 - [E10s] Sort out what object TabParent::GetGlobalJSObject should return and how. r=smaug