ipc/testshell/TestShellParent.cpp
@@ -86,17 +86,17 @@ TestShellParent::DeallocPContextWrapper(PContextWrapperParent* actor)
     return true;
 }
 
-bool
+JSBool
 TestShellParent::GetGlobalJSObject(JSContext* cx, JSObject** globalp)
 {
     // TODO Unify this code with TabParent::GetGlobalJSObject.
     nsTArray<PContextWrapperParent*> cwps(1);
     ManagedPContextWrapperParent(cwps);
     if (cwps.Length() < 1)
-        return false;
+        return JS_FALSE;
     NS_ASSERTION(cwps.Length() == 1, "More than one PContextWrapper?");
     ContextWrapperParent* cwp = static_cast<ContextWrapperParent*>(cwps[0]);
-    return (cwp->GetGlobalJSObject(cx, globalp));
+    return cwp->GetGlobalJSObject(cx, globalp);
 }
 
 JSBool
